Fix warnings and deprecated coding patterns